--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ Sets styles for header element and its subelements
 
 .header nav {
     display: inline-block;
-    padding-top: 25px;
+    padding-top: 27px;
     margin-right: 15px;
     font-family: "Trirong", serif;/*'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;*/
     font-size: 20px;
@@ -46,6 +46,55 @@ Sets styles for header element and its subelements
 .nav a {
 
     color: black;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+    text-decoration: underline;
 }
 /*
-==========================================================
+==========================================================*/
+/*sets text underline*/
+.underline {
+    text-decoration: underline;
+}
+
+/**/
+.main {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2%;
+}
+
+/**/
+.main head {
+    font-family: "Trirong", serif;
+    font-size: 20px;
+    color: brown;
+}
+
+/**/
+.about-me {
+    flex: 1 0 0;
+    padding: 10px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+}
+
+/**/
+.work {
+    flex: 1 0 0;
+    padding: 10px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+}
+
+/**/
+.contact-me {
+    flex: 1 0 0;
+    padding: 10px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+}
