--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,11 @@ elements on the page
 For body element styles the background white
 */
 body {
-    background-color: #83e0f7;
+    background-color: #28685f;
+}
+
+p {
+    padding: 10px;
 }
 
 /*
@@ -22,8 +26,8 @@ Sets styles for header element and its subelements
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
-    font-family: "Trirong", serif;/*'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;*/
-    background-color: #cfaf44;
+    font-family: "Trirong", serif;
+    background-color: #7A5A6C;
     color: #ffffff;
 }
 
@@ -58,10 +62,49 @@ Sets styles for header element and its subelements
     text-decoration: underline;
 }
 
-/**/
-.main {
-        margin-top: 2%;
+.underline:hover {
+    color: red;
+    text-decoration: underline;
 }
+
+.underline:visited {
+    color: yellow;
+    text-decoration: underline;
+}
+
+
+.underline:visited:hover {
+    color: red;
+    text-decoration: underline;
+}
+
+.figimg {
+    
+    margin-bottom: 25px;
+   /* position: relative;*/
+   /* justify-items: flex-end;*/
+ 
+}
+
+.figimg {
+    height: 200px;
+    width: 100%;
+    position: relative;
+    background-image: url('img/pixels.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
+.figimg h2 {
+    color: rgb(71, 48, 5);
+    position: absolute; 
+    padding: 14px 20px;
+    text-decoration: none;
+    bottom: 0;
+    right: 0;
+}
+/**/
 
 /**/
 .main .head {
@@ -77,6 +120,8 @@ Sets styles for header element and its subelements
     text-align: center;
     border-style: solid;
     border-width: 1px;
+    
+    
 }
 
 /**/
@@ -90,13 +135,9 @@ Sets styles for header element and its subelements
 
 /**/
 .contact-me {
-    flex: 1 0 0;
     padding: 10px;
     text-align: center;
-    justify-content: space-between;
-    border-style: solid;
-    border-width: 1px;
-    
+    justify-content: space-between;    
 }
 .contact-me ul {
     list-style-type: none;
@@ -122,24 +163,134 @@ Sets styles for header element and its subelements
     margin: 10px 0;
   }
 
-.column {
-    margin: 5px 0;
-    /*border: 1px dashed green;*/
-    display: flex;
-    flex-direction: column;
-    min-width: 33.33%;
+  .header-style {
+    border-bottom: 2px dashed #9c2a69;
+
   }
+
+  .column {
+    margin: 5px 0;
+    flex-direction: column;
+    flex: 1 1 100%;
+  }
+
+
+
+
 
 footer {
     text-align: center;
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
-    background-color: rgb(144, 238, 141);
+    background-color:#533C56;
     color: rgb(10, 9, 9);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    }
 
 footer *{
    padding-top: 5px;
+}
+
+
+.contacts > ul {
+    display: flex;
+    flex-direction: column;
+}
+
+/* styling of the Li's for the Contact me block */
+.contacts > ul > li {
+     height: 100px;  background-color: #8cacea;  margin: 8px;
+}
+
+
+
+
+
+
+
+@media only screen and (min-width: 601px) {
+    .column {
+        margin: 5px 0;
+        flex-direction: column;
+       /* min-width: 33.33%;
+        max-width: 33.33%;*/
+        flex: 1 1 50%;
+      }
+    
+    .limit-width-20pc {
+        max-width: 20%;
+    }
+
+    .limit-width-20pc:hover {
+        background-color: rgba(212, 161, 161, 0.5);
+    }
+
+    .header-style {
+        border-right: 2px solid #9c2a69;
+        border-bottom: none;
+      }
+
+    .figimg {
+        height: 600px;
+    }
+
+    .contacts > ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+}
+
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 100%;
+    padding: 15px 0;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+    height: 100%;
+  }
+
+.card > div.container {
+    position: relative;
+    margin: auto;
+    width: 80%;
+    height: 200px;
+    background-image: url('img/Which_programming_language_to_choose.original.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.card > div.container > div.banner-text {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    color: rgb(35, 83, 83);
+}
+
+.card > div.container-100 {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: 400px;
+    background-image: url('img/Which_programming_language_to_choose.original.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.card > div.container-100 > div.banner-text {
+    position: absolute;
+    top: 35%;
+    left: 0;
+    color: rgb(35, 83, 83);
 }
