--- a/styles.css
+++ b/styles.css
@@ -21,40 +21,7 @@ p {
 /*
 Sets styles for header element and its subelements
 */
-.header {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 20px;
-    font-family: "Trirong", serif;
-    background-color: #7A5A6C;
-    color: #ffffff;
-}
 
-
-.header h1 {
-    display: block;
-    font-weight: bold;
-    font-size: 48px;
-}
-
-.header nav {
-    display: inline-block;
-    padding-top: 27px;
-    margin-right: 15px;
-    font-family: "Trirong", serif;/*'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;*/
-    font-size: 20px;
-    list-style-type: none;
-          
-}
-.nav a {
-
-    color: black;
-    padding: 14px 20px;
-    text-decoration: none;
-    text-align: center;
-    text-decoration: underline;
-}
 /*
 ==========================================================*/
 /*sets text underline*/
@@ -78,13 +45,6 @@ Sets styles for header element and its subelements
     text-decoration: underline;
 }
 
-.figimg {
-    
-    margin-bottom: 25px;
-   /* position: relative;*/
-   /* justify-items: flex-end;*/
- 
-}
 
 .figimg {
     height: 200px;
@@ -94,6 +54,7 @@ Sets styles for header element and its subelements
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    margin-bottom: 25px;
 }
 
 .figimg h2 {
@@ -174,10 +135,6 @@ Sets styles for header element and its subelements
     flex: 1 1 100%;
   }
 
-
-
-
-
 footer {
     text-align: center;
     width: 100%;
@@ -198,11 +155,47 @@ footer *{
 
 /* styling of the Li's for the Contact me block */
 .contacts > ul > li {
-     height: 100px;  background-color: #8cacea;  margin: 8px;
+     height: 40px;  background-color: #8cacea;  margin: 4px;
 }
 
 
+.header {
+    /* display: flex; */
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+    font-family: "Trirong", serif;
+    background-color: #7A5A6C;
+    color: #ffffff;
+}
 
+.header h1 {
+    /* display: block; */
+    font-weight: bold;
+    font-size: 26px;
+    text-align: center;
+}
+
+.header > nav {
+    /* display: inline-block; */
+    display: flex;
+    flex-direction: column;
+    /* padding-top: 27px; */
+    /* margin-right: 15px; */
+    font-family: "Trirong", serif;/*'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;*/
+    font-size: 20px;
+    /* list-style-type: none; */
+          
+}
+.header > nav > a {
+    /* flex-direction: column; */
+    color: black;
+    height: 40px;  margin: 4px;
+    /* padding: 14px 20px; */
+    text-decoration: none;
+    text-align: center;
+    text-decoration: underline;
+}
 
 
 
@@ -211,8 +204,6 @@ footer *{
     .column {
         margin: 5px 0;
         flex-direction: column;
-       /* min-width: 33.33%;
-        max-width: 33.33%;*/
         flex: 1 1 50%;
       }
     
@@ -239,6 +230,29 @@ footer *{
         flex-wrap: wrap;
     }
 
+    .header {
+        display: flex; 
+        flex-direction: row;
+        justify-content: space-between;
+      
+    }
+
+    .header > nav {
+        display: inline-block;
+        flex-direction: row;
+        list-style-type: none;
+              
+    }
+    
+    .header > nav > a {
+        display: inline-block;
+        flex-direction: row;
+        padding: 14px 20px; 
+        margin: 0;
+    }
+
+     
+    
 }
 
 
