--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ elements on the page
 For body element styles the background white
 */
 body {
-    background-color: #28685f;
+    background-color: #46344E;
 }
 
 p {
@@ -27,6 +27,7 @@ Sets styles for header element and its subelements
 /*sets text underline*/
 .underline {
     text-decoration: underline;
+    color: white;
 }
 
 .underline:hover {
@@ -58,12 +59,13 @@ Sets styles for header element and its subelements
 }
 
 .figimg h2 {
-    color: rgb(71, 48, 5);
+    color: #FAED26;
     position: absolute; 
     padding: 14px 20px;
     text-decoration: none;
     bottom: 0;
     right: 0;
+    background-color: #5A5560;
 }
 /**/
 
@@ -71,7 +73,7 @@ Sets styles for header element and its subelements
 .main .head {
     font-family: "Trirong", serif;
     font-size: 20px;
-    color: rgb(245, 238, 238);
+    color: white;
 }
 
 /**/
@@ -79,7 +81,7 @@ Sets styles for header element and its subelements
     flex: 1 0 0;
     padding: 10px;
     text-align: center;
-    border-style: solid;
+    /* border-style: solid; */
     border-width: 1px;
     
     
@@ -90,7 +92,7 @@ Sets styles for header element and its subelements
     flex: 1 0 0;
     padding: 10px;
     text-align: center;
-    border-style: solid;
+    /* border-style: solid; */
     border-width: 1px;
 }
 
@@ -111,12 +113,12 @@ Sets styles for header element and its subelements
 }
 
 .border-after {
-    border-right: 2px solid #9c2a69;
+    border-right: 2px solid #FAED26;
     padding-left: 2px;
   }
 
 .row {
-    border: 1px dashed coral;
+    /* border: 1px dashed coral; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -124,10 +126,10 @@ Sets styles for header element and its subelements
     margin: 10px 0;
   }
 
-  .header-style {
+  /* .header-style {
     border-bottom: 2px dashed #9c2a69;
 
-  }
+  } */
 
   .column {
     margin: 5px 0;
@@ -138,8 +140,8 @@ Sets styles for header element and its subelements
 footer {
     text-align: center;
     width: 100%;
-    background-color:#533C56;
-    color: rgb(10, 9, 9);
+    background-color:#46344E;
+    color: wheat;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    }
 
@@ -155,43 +157,35 @@ footer *{
 
 /* styling of the Li's for the Contact me block */
 .contacts > ul > li {
-     height: 40px;  background-color: #8cacea;  margin: 4px;
+     height: 40px;  margin: 4px;
 }
 
 
 .header {
-    /* display: flex; */
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
     font-family: "Trirong", serif;
-    background-color: #7A5A6C;
-    color: #ffffff;
+    background-color: #46344E;
+    color: #FAED26;
 }
 
 .header h1 {
-    /* display: block; */
     font-weight: bold;
     font-size: 26px;
     text-align: center;
 }
 
 .header > nav {
-    /* display: inline-block; */
     display: flex;
     flex-direction: column;
-    /* padding-top: 27px; */
-    /* margin-right: 15px; */
-    font-family: "Trirong", serif;/*'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;*/
+    font-family: "Trirong", serif, 'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    /* list-style-type: none; */
-          
+             
 }
 .header > nav > a {
-    /* flex-direction: column; */
-    color: black;
+    color: white;
     height: 40px;  margin: 4px;
-    /* padding: 14px 20px; */
     text-decoration: none;
     text-align: center;
     text-decoration: underline;
@@ -212,11 +206,11 @@ footer *{
     }
 
     .limit-width-20pc:hover {
-        background-color: rgba(212, 161, 161, 0.5);
+        background-color:#5A5560;
     }
 
     .header-style {
-        border-right: 2px solid #9c2a69;
+        border-right: 2px solid #9B786F;
         border-bottom: none;
       }
 
@@ -257,11 +251,13 @@ footer *{
 
 
 .card {
+    padding: 15px;
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    /* box-shadow: 10px 10px 10px 10px red; */
+    /* transition: 0.3s; */
     height: 100%;
-    padding: 15px 0;
+    /* padding: 15px 0; */
+    
   }
   
   /* On mouse-over, add a deeper shadow */
@@ -271,14 +267,19 @@ footer *{
   
   /* Add some padding inside the card container */
   .container {
-    padding: 2px 16px;
+    /* padding: 2px 16px; */
     height: 100%;
+    border: 4px solid  #5A5560;
+  }
+  .container:hover, .container-100:hover {
+    opacity: 0.8;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
 
 .card > div.container {
     position: relative;
     margin: auto;
-    width: 80%;
+    width: 100%;
     height: 200px;
     background-image: url('img/Which_programming_language_to_choose.original.png');
     background-repeat: no-repeat;
@@ -289,7 +290,8 @@ footer *{
     position: absolute;
     top: 25%;
     left: 0;
-    color: rgb(35, 83, 83);
+    color: white;
+    background-color: #5A5560;
 }
 
 .card > div.container-100 {
@@ -300,11 +302,14 @@ footer *{
     background-image: url('img/Which_programming_language_to_choose.original.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    border: 4px solid  #5A5560;
+
 }
 
 .card > div.container-100 > div.banner-text {
     position: absolute;
     top: 35%;
     left: 0;
-    color: rgb(35, 83, 83);
+    color: white;
+    background-color: #5A5560;
 }
