--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ Sets styles for header element and its subelements
     text-decoration: underline;
 }
 
-==========================================================
+
 /*sets text underline*/
 .underline {
     text-decoration: underline;
@@ -276,7 +276,10 @@ footer *{
     margin: auto;
     width: 100%;
     height: 200px;
-    background-image: url('img/Which_programming_language_to_choose.original.png');
+    /* background-image: url('img/pasgen.PNG');
+    background-image: url('img/Planner.PNG'); */
+    /* background-image: url('img/quiz.PNG');
+    background-image: url('img/Horis.PNG'); */
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -294,7 +297,7 @@ footer *{
     margin: auto;
     width: 100%;
     height: 400px;
-    background-image: url('img/Which_programming_language_to_choose.original.png');
+    background-image: url('img/USREP.PNG');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     border: 4px solid  #5A5560;
