--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,7 @@ elements on the page
     padding: 0;
     box-sizing: border-box;
 }
-/* 
-
-*/
+/*sets background style to the whole body page*/
 body {
     background-color: #46344E;
 }
@@ -17,7 +15,6 @@ body {
 p {
     padding: 10px;
 }
-
 /*
 Sets styles for header element and its subelements
 */
@@ -43,6 +40,7 @@ Sets styles for header element and its subelements
     font-size: 20px;
              
 }
+
 .header > nav > a {
     color: white;
     height: 40px;  margin: 4px;
@@ -51,6 +49,11 @@ Sets styles for header element and its subelements
     text-decoration: underline;
 }
 
+.main .head {
+    font-family: "Trirong", serif;
+    font-size: 20px;
+    color: white;
+}
 
 /*sets text underline*/
 .underline {
@@ -68,14 +71,12 @@ Sets styles for header element and its subelements
     text-decoration: underline;
 }
 
-
 .underline:visited:hover {
     color: red;
     text-decoration: underline;
 }
 
-/* Sets styles for images */
-
+/* Sets styles for main image */
 .figimg {
     height: 200px;
     width: 100%;
@@ -87,6 +88,7 @@ Sets styles for header element and its subelements
     margin-bottom: 25px;
 }
 
+/*sets styles for subtitle*/
 .figimg h2 {
     color: #FAED26;
     position: absolute; 
@@ -96,26 +98,16 @@ Sets styles for header element and its subelements
     right: 0;
     background-color: #5A5560;
 }
-/**/
 
-/**/
-.main .head {
-    font-family: "Trirong", serif;
-    font-size: 20px;
-    color: white;
-}
-
-/**/
+/*sets about me block styles*/
 .about-me {
     flex: 1 0 0;
     padding: 10px;
     text-align: center;
-    border-width: 1px;
-    
-    
+    border-width: 1px;   
 }
 
-/**/
+/*sets work block styles*/
 .work {
     flex: 1 0 0;
     padding: 10px;
@@ -123,12 +115,13 @@ Sets styles for header element and its subelements
     border-width: 1px;
 }
 
-/**/
+/*sets contact me block styles*/
 .contact-me {
     padding: 10px;
     text-align: center;
     justify-content: space-between;    
 }
+
 .contact-me ul {
     list-style-type: none;
 }
@@ -136,7 +129,6 @@ Sets styles for header element and its subelements
 .contact-me li {
     display: inline-block;
     padding: 20px 25px;
-
 }
 
 .border-after {
@@ -158,6 +150,7 @@ Sets styles for header element and its subelements
     flex: 1 1 100%;
   }
 
+/* sets footer styles */
 footer {
     text-align: center;
     width: 100%;
@@ -170,7 +163,7 @@ footer *{
    padding-top: 5px;
 }
 
-
+/* styling of the ul for the Contact me block */
 .contacts > ul {
     display: flex;
     flex-direction: column;
@@ -181,11 +174,7 @@ footer *{
      height: 40px;  margin: 4px;
 }
 
-
-
-
-
-
+/*  overrides styles whn device screen bigger than 601px*/
 @media only screen and (min-width: 601px) {
     .column {
         margin: 5px 0;
@@ -195,10 +184,6 @@ footer *{
     
     .limit-width-20pc {
         max-width: 20%;
-    }
-
-    .limit-width-20pc:hover {
-        background-color:#5A5560;
     }
 
     .header-style {
@@ -219,15 +204,13 @@ footer *{
     .header {
         display: flex; 
         flex-direction: row;
-        justify-content: space-between;
-      
+        justify-content: space-between;  
     }
 
     .header > nav {
         display: inline-block;
         flex-direction: row;
-        list-style-type: none;
-              
+        list-style-type: none;       
     }
     
     .header > nav > a {
@@ -239,11 +222,10 @@ footer *{
     
 }
 
-
+/* Sets styles for cards */
 .card {
     padding: 15px;
     height: 100%;
-    
   }
   
   /* On mouse-over, add a deeper shadow */
@@ -261,29 +243,28 @@ footer *{
       text-decoration: underline;
   }
   
-  /* Add some padding inside the card container */
+  /* some padding inside the card container */
   .container {
     height: 100%;
     border: 4px solid  #5A5560;
   }
+
   .container:hover, .container-100:hover {
     opacity: 0.8;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
 
+/* sets containers styles */
 .card > div.container {
     position: relative;
     margin: auto;
     width: 100%;
     height: 200px;
-    /* background-image: url('img/pasgen.PNG');
-    background-image: url('img/Planner.PNG'); */
-    /* background-image: url('img/quiz.PNG');
-    background-image: url('img/Horis.PNG'); */
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
+/* sets container text */
 .card > div.container > div.banner-text {
     position: absolute;
     top: 25%;
@@ -292,6 +273,7 @@ footer *{
     background-color: #5A5560;
 }
 
+/* sets big container style */
 .card > div.container-100 {
     position: relative;
     margin: auto;
@@ -301,9 +283,9 @@ footer *{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     border: 4px solid  #5A5560;
-
 }
 
+/* sets container text */
 .card > div.container-100 > div.banner-text {
     position: absolute;
     top: 35%;
